--- a/index.html
+++ b/index.html
@@ -4,48 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <style>
-        /* 強力にスクロールを禁止 */
         * { touch-action: none; -webkit-user-select: none; }
-        html, body { width: 100%; height: 100%; margin: 0; padding: 0; background: #f0f4f8; overflow: hidden; position: fixed; }
-        
-        #app { display: flex; flex-direction: column; height: 100vh; width: 100%; }
-        header { flex-shrink: 0; background: #fff; text-align: center; padding: 10px; border-bottom: 2px solid #dee2e6; }
-        #q-text { font-weight: bold; font-size: 1.1rem; min-height: 3rem; display: flex; align-items: center; justify-content: center; padding: 0 10px; }
-
+        body, html { margin: 0; padding: 0; width: 100%; height: 100%; overflow: hidden; font-family: sans-serif; background: #f0f4f8; position: fixed; }
+        #app { display: flex; flex-direction: column; height: 100vh; }
+        header { background: #fff; padding: 15px; text-align: center; border-bottom: 2px solid #ddd; }
+        #q-text { font-weight: bold; font-size: 1.1rem; height: 3rem; display: flex; align-items: center; justify-content: center; }
         #main-stage { flex: 1; display: flex; flex-direction: column; align-items: center; justify-content: center; }
-        #drop-zone { width: 140px; height: 140px; border: 4px dashed #adb5bd; border-radius: 50%; display: flex; align-items: center; justify-content: center; background: #fff; position: relative; color: #adb5bd; font-size: 0.8rem; text-align: center; }
+        #drop-zone { width: 160px; height: 160px; border: 4px dashed #bbb; border-radius: 50%; background: #fff; display: flex; align-items: center; justify-content: center; position: relative; color: #bbb; }
         .placed-seal { width: 100%; height: 100%; border-radius: 50%; display: flex; align-items: center; justify-content: center; color: white; font-weight: bold; position: absolute; }
-
-        #input-form { display: none; width: 90%; background: white; padding: 20px; border-radius: 12px; touch-action: auto; }
-        #input-form input { touch-action: auto; width: 80px; padding: 10px; font-size: 1.2rem; }
-
-        #seals-container { flex-shrink: 0; background: #fff; padding-bottom: 40px; border-top: 1px solid #dee2e6; }
-        .seal-row { display: flex; gap: 12px; justify-content: center; padding: 15px 0 5px 0; }
-        .seal { width: 70px; height: 70px; border-radius: 50%; background: #e9ecef; display: flex; align-items: center; justify-content: center; font-size: 0.8rem; font-weight: bold; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
-
-        #next-btn { display: none; margin-top: 20px; padding: 15px 60px; border-radius: 35px; border: none; background: #28a745; color: white; font-weight: bold; font-size: 1.2rem; touch-action: auto; }
+        #input-form { display: none; width: 85%; background: #fff; padding: 20px; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
+        .row { display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; }
+        input { width: 80px; padding: 10px; font-size: 1.2rem; }
+        #seals-container { background: #fff; padding: 20px 0 40px 0; border-top: 1px solid #ddd; }
+        .seal-row { display: flex; gap: 12px; justify-content: center; margin-bottom: 12px; }
+        .seal { width: 70px; height: 70px; border-radius: 50%; background: #eee; display: flex; align-items: center; justify-content: center; font-size: 0.8rem; font-weight: bold; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
+        #next-btn { display: none; padding: 15px 60px; border-radius: 35px; border: none; background: #28a745; color: #fff; font-weight: bold; font-size: 1.2rem; margin-top: 20px; }
         .bg-blue { background: #007bff !important; } .bg-red { background: #dc3545 !important; } .bg-yellow { background: #ffc107 !important; color: #000; }
-        .status-dot { width: 20px; height: 20px; border-radius: 50%; background: #ddd; margin-left: 10px; }
     </style>
 </head>
 <body>
 <div id="app">
-    <header><div id="q-progress" style="font-size:0.8rem; color:#6c757d;"></div><div id="q-text"></div></header>
+    <header><div id="q-progress" style="font-size:0.8rem;color:#666;"></div><div id="q-text"></div></header>
     <div id="main-stage">
-        <div id="drop-zone-wrap"><div id="drop-zone">シールを<br>ここに置く</div></div>
+        <div id="drop-wrap"><div id="drop-zone">シールを置く</div></div>
         <div id="input-form">
-            <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:10px;">
-                <span>握力 (kg)</span><input type="number" id="grip" oninput="judgeGrip()"><div id="dot-grip" class="status-dot"></div>
-            </div>
-            <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:10px;">
-                <span>身長 (cm)</span><input type="number" id="height" oninput="calcBMI()"><div></div>
-            </div>
-            <div style="display:flex; justify-content:space-between; align-items:center;">
-                <span>体重 (kg)</span><input type="number" id="weight" oninput="calcBMI()"><div></div>
-            </div>
-            <div style="border-top:1px solid #eee; margin-top:10px; padding-top:10px; display:flex; justify-content:space-between;">
-                <span>BMI</span><span id="bmi-val" style="font-weight:bold;">--</span><div id="dot-bmi" class="status-dot"></div>
-            </div>
+            <div class="row"><span>握力(kg)</span><input type="number" id="grip"></div>
+            <div class="row"><span>身長(cm)</span><input type="number" id="height"></div>
+            <div class="row"><span>体重(kg)</span><input type="number" id="weight"></div>
         </div>
         <button id="next-btn" onclick="goNext()">次へ進む</button>
     </div>
@@ -55,29 +40,20 @@
     const questions = [
         { id: 12, text: "Q12. 地域活動に参加していますか？", opts: ["週1以上", "月1以上", "年数回", "以前は参加", "参加せず"], type: "neutral" },
         { id: 7, text: "Q7. 歩く速度が遅くなりましたか？", opts: ["はい", "いいえ"], type: "logic", red: "はい", blue: "いいえ" },
-        { id: "calc", text: "身体計測（握力・BMI）", type: "calc" }
+        { id: "calc", text: "身体計測", type: "calc" }
     ];
     let currentIdx = 0;
     let answers = {};
 
     function load() {
         const q = questions[currentIdx];
-        document.getElementById('q-progress').innerText = `設問 ${currentIdx + 1} / 3`;
+        document.getElementById('q-progress').innerText = `${currentIdx + 1} / 3`;
         document.getElementById('q-text').innerText = q.text;
-        document.getElementById('next-btn').style.display = "none";
-        
-        if (q.type === "calc") {
-            document.getElementById('drop-zone-wrap').style.display = "none";
-            document.getElementById('seals-container').style.display = "none";
-            document.getElementById('input-form').style.display = "block";
-            document.getElementById('next-btn').style.display = "block";
-        } else {
-            document.getElementById('drop-zone-wrap').style.display = "block";
-            document.getElementById('seals-container').style.display = "block";
-            document.getElementById('input-form').style.display = "none";
-            document.getElementById('drop-zone').innerHTML = "シールを<br>ここに置く";
-            renderSeals(q.opts);
-        }
+        document.getElementById('next-btn').style.display = q.type === "calc" ? "block" : "none";
+        document.getElementById('drop-wrap').style.display = q.type === "calc" ? "none" : "block";
+        document.getElementById('input-form').style.display = q.type === "calc" ? "block" : "none";
+        document.getElementById('seals-container').style.display = q.type === "calc" ? "none" : "block";
+        if(q.type !== "calc") renderSeals(q.opts);
     }
 
     function renderSeals(opts) {
@@ -86,61 +62,37 @@
         const row2 = document.createElement('div'); row2.className = 'seal-row';
         opts.forEach((opt, i) => {
             const s = document.createElement('div'); s.className = 'seal'; s.innerText = opt;
-            s.addEventListener('touchstart', onStart, {passive: false});
+            s.ontouchstart = (e) => {
+                e.preventDefault(); const active = s.cloneNode(true); document.body.appendChild(active);
+                active.style.position = 'fixed'; active.style.zIndex = '1000';
+                const move = (ev) => {
+                    const t = ev.touches[0];
+                    active.style.left = (t.clientX - 35) + 'px'; active.style.top = (t.clientY - 35) + 'px';
+                };
+                document.ontouchmove = move;
+                document.ontouchend = (ev) => {
+                    const t = ev.changedTouches[0]; const r = document.getElementById('drop-zone').getBoundingClientRect();
+                    if (t.clientX > r.left && t.clientX < r.right && t.clientY > r.top && t.clientY < r.bottom) {
+                        const q = questions[currentIdx];
+                        let c = (q.type === "logic") ? (q.red === active.innerText ? "bg-red" : "bg-blue") : "bg-yellow";
+                        document.getElementById('drop-zone').innerHTML = `<div class="placed-seal ${c}">${active.innerText}</div>`;
+                        answers[q.id] = active.innerText;
+                        document.getElementById('next-btn').style.display = "block";
+                    }
+                    active.remove(); document.ontouchmove = null;
+                };
+            };
             (i < 3) ? row1.appendChild(s) : row2.appendChild(s);
         });
         container.appendChild(row1); if(opts.length > 3) container.appendChild(row2);
     }
 
-    let active = null;
-    function onStart(e) {
-        e.preventDefault(); 
-        active = e.target.cloneNode(true); document.body.appendChild(active);
-        active.style.position = 'fixed'; active.style.zIndex = '3000';
-        updatePos(e.touches[0]);
-        document.ontouchmove = (ev) => { ev.preventDefault(); updatePos(ev.touches[0]); };
-        document.ontouchend = (ev) => {
-            const t = ev.changedTouches[0];
-            const r = document.getElementById('drop-zone').getBoundingClientRect();
-            if (t.clientX > r.left && t.clientX < r.right && t.clientY > r.top && t.clientY < r.bottom) {
-                const q = questions[currentIdx];
-                let c = (q.type==="logic") ? (q.red === active.innerText ? "bg-red" : "bg-blue") : "bg-yellow";
-                document.getElementById('drop-zone').innerHTML = `<div class="placed-seal ${c}">${active.innerText}</div>`;
-                answers[q.id] = active.innerText;
-                document.getElementById('next-btn').style.display = "block";
-            }
-            active.remove(); document.ontouchmove = null;
-        };
-    }
-    function updatePos(t) { active.style.left = (t.clientX-35)+'px'; active.style.top = (t.clientY-35)+'px'; }
-
-    function judgeGrip() {
-        const val = parseFloat(document.getElementById('grip').value);
-        document.getElementById('dot-grip').className = "status-dot " + (val < 28 ? "bg-red" : "bg-blue");
-    }
-    function calcBMI() {
-        const h = parseFloat(document.getElementById('height').value)/100;
-        const w = parseFloat(document.getElementById('weight').value);
-        if (h > 0 && w > 0) {
-            const bmi = (w/(h*h)).toFixed(1);
-            document.getElementById('bmi-val').innerText = bmi;
-            document.getElementById('dot-bmi').className = "status-dot " + (bmi < 21.5 ? "bg-red" : "bg-blue");
-        }
-    }
-
     function goNext() {
         if (currentIdx < questions.length - 1) {
-            currentIdx++; load();
+            currentIdx++; document.getElementById('drop-zone').innerHTML = "シールを置く"; load();
         } else {
-            // ここでPythonにデータを投げる
-            const finalData = { 
-                done: true, 
-                grip: document.getElementById('grip').value, 
-                bmi: document.getElementById('bmi-val').innerText 
-            };
-            window.parent.postMessage({ isStreamlitMessage: true, type: "streamlit:setComponentValue", value: finalData }, "*");
-            // 視覚的なフィードバック
-            document.body.innerHTML = "<div style='display:flex;justify-content:center;align-items:center;height:100vh;font-weight:bold;color:#28a745;'>保存処理中...</div>";
+            const data = { done: true, q_answers: answers, grip: document.getElementById('grip').value };
+            window.parent.postMessage({ isStreamlitMessage: true, type: "streamlit:setComponentValue", value: data }, "*");
         }
     }
     load();
