--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
             cursor: pointer;
             position: relative; z-index: 9999;
             touch-action: manipulation;
+            -webkit-tap-highlight-color: transparent;
         }
         #next-btn:active {
             background: #218838;
+            transform: scale(0.98);
         }
+        #debug { position: fixed; bottom: 10px; left: 10px; background: rgba(0,0,0,0.7); color: white; padding: 5px; font-size: 10px; z-index: 10000; }
     </style>
 </head>
 <body>
@@ -55,6 +58,7 @@
     </div>
     <div id="seals-container"></div>
 </div>
+<div id="debug">クリック: 0</div>
 <script>
     const questions = [
         { id: 12, text: "Q12. 地域活動に参加していますか?", opts: ["週1以上", "月1以上", "年数回", "以前は参加", "参加せず"], type: "neutral" },
@@ -63,16 +67,28 @@
     ];
     let currentIdx = 0;
     let answers = {};
+    let clickCount = 0;
     const dropZone = document.getElementById('drop-zone');
     const container = document.getElementById('seals-container');
     const inputForm = document.getElementById('input-form');
     const nextBtn = document.getElementById('next-btn');
+    const debugDiv = document.getElementById('debug');
 
-    // ボタンクリック処理
-    nextBtn.addEventListener('click', goNext);
-    nextBtn.addEventListener('touchend', (e) => {
+    // 複数の方法でイベントを登録
+    nextBtn.onclick = function(e) {
+        debugDiv.innerText = 'クリック: ' + (++clickCount) + ' (onclick)';
+        goNext();
+    };
+
+    nextBtn.addEventListener('mousedown', function(e) {
+        debugDiv.innerText = 'クリック: ' + (++clickCount) + ' (mousedown)';
+        goNext();
+    });
+
+    nextBtn.addEventListener('touchstart', function(e) {
         e.preventDefault();
         e.stopPropagation();
+        debugDiv.innerText = 'クリック: ' + (++clickCount) + ' (touchstart)';
         goNext();
     }, {passive: false});
 
@@ -87,6 +103,7 @@
             container.style.display = "none";
             inputForm.style.display = "block";
             nextBtn.style.display = "block";
+            debugDiv.innerText = 'ボタン表示 - 押してください';
         } else {
             document.getElementById('drop-zone-wrap').style.display = "block";
             container.style.display = "flex";
@@ -165,10 +182,12 @@
     }
 
     function goNext() {
+        debugDiv.innerText = 'goNext実行! currentIdx=' + currentIdx;
         if (currentIdx < questions.length - 1) {
             currentIdx++;
             load();
         } else {
+            debugDiv.innerText = 'データ送信中...';
             const results = {
                 done: true,
                 q_answers: answers,
@@ -184,6 +203,7 @@
                 type: "streamlit:setComponentValue",
                 value: results
             }, "*");
+            debugDiv.innerText = 'データ送信完了!';
         }
     }
     load();
