--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <style>
+        /* UIデザインは1ミリも変えないわ */
         html, body { position: fixed; width: 100%; height: 100%; overflow: hidden; touch-action: none; font-family: sans-serif; margin: 0; background: #f0f4f8; }
-        #app { display: none; flex-direction: column; height: 100%; } /* 初期は非表示 */
+        #app { display: flex; flex-direction: column; height: 100%; }
         header { height: 70px; background: #fff; text-align: center; border-bottom: 2px solid #dee2e6; display: flex; flex-direction: column; justify-content: center; }
         #main-stage { flex: 1; display: flex; flex-direction: column; align-items: center; justify-content: center; position: relative; }
         #drop-zone { width: 150px; height: 150px; border: 4px dashed #adb5bd; border-radius: 50%; display: flex; align-items: center; justify-content: center; background: #fff; position: relative; color: #adb5bd; font-size: 0.8rem; }
@@ -40,8 +41,6 @@
     </div>
     <div id="seals-container"></div>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/streamlit-component-lib@1.4.0/dist/index.min.js"></script>
 <script>
     const questions = [
         { id: "q12", text: "Q12. 地域活動に参加していますか？", opts: ["週1以上", "月1以上", "年数回", "以前は参加", "参加せず"], type: "neutral" },
@@ -122,24 +121,17 @@
         if (currentIdx === questions.length - 1) {
             allAnswers.grip = document.getElementById('grip').value;
             allAnswers.bmi = document.getElementById('bmi-val').innerText;
-            allAnswers.is_done = true;
-            // 正攻法：SDK経由で値を返す
-            Streamlit.setComponentValue(allAnswers);
+            allAnswers.done = "1";
+
+            // ★ 解決策B：URLクエリを生成して親画面をリダイレクト
+            const params = new URLSearchParams(allAnswers).toString();
+            // iframeの中から親(window.top)のURLを書き換える
+            window.top.location.href = window.top.location.pathname + "?" + params;
         } else {
             currentIdx++; load();
         }
     }
-
-    // Streamlit連携の初期化
-    function onRender() {
-        // 初回のみ実行
-        if (document.getElementById('app').style.display !== 'flex') {
-            document.getElementById('app').style.display = 'flex';
-            load();
-        }
-        Streamlit.setFrameHeight(1200);
-    }
-    Streamlit.events.addEventListener(Streamlit.RENDER_EVENT, onRender);
+    load();
 </script>
 </body>
 </html>
